tests/NormalTests/paczka1/fuzzy1/33119681.err
Error in line 1: UuuO9 A492 96,3
Error in line 5: NhTGVP48iZ A492 80,2
Error in line 26: NhTGVP48iZ A492 52,1
Error in line 32: vSZ A18 76,8
Error in line 21: QOALo9C S813 273,2
